--- a/bipartite_matching.ipynb
+++ b/bipartite_matching.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 1: Define a bipartite graph"
+    "### Step 1: Define a bipartite graph. (Assume we are given any similarity metric - this similarity metric is taken from geeksforgeeks)."
    ]
   },
   {
