edited out unused parts

--- a/bipartite_matching.ipynb
+++ b/bipartite_matching.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,43 +160,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Table A: [('US', '300 M'), ('CN', '300 M'), ('CA', '300 M'), ('AU', '300 M')] \n",
-      "\n",
-      "Table B: [('USA', '35 T'), ('USA', '32 T'), ('UK', '3 T'), ('AUS', '20 T'), ('CAL', '22 T')] \n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# declaration of graph as dictionary \n",
-    "addEdge(table_a,'US','300 M')\n",
-    "addEdge(table_a,'CN','300 M') \n",
-    "addEdge(table_a,'CA','300 M') \n",
-    "addEdge(table_a,'AU','300 M') \n",
-    "\n",
-    "addEdge(table_b,'USA','35 T') \n",
-    "addEdge(table_b,'UK','3 T')\n",
-    "addEdge(table_b,'USA','32 T') \n",
-    "addEdge(table_b,'AUS','20 T') \n",
-    "addEdge(table_b,'CAL','22 T') \n",
-    "\n",
-    "# Driver Function call  \n",
-    "# to print generated graph \n",
-    "print(\"Table A:\", generate_edges(table_a), \"\\n\")\n",
-    "\n",
-    "print(\"Table B:\", generate_edges(table_b), \"\\n\")"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,20 +202,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{('AUS_20 T_2', 'AU_300 M_1'),\n",
-       " ('CA_300 M_1', 'CAL_22 T_2'),\n",
+       " ('CAL_22 T_2', 'CA_300 M_1'),\n",
        " ('UK_3 T_2', 'CN_300 M_1'),\n",
        " ('USA_32 T_2', 'USA_35 T_1'),\n",
-       " ('US_300 M_1', 'USA_35 T_2')}"
+       " ('USA_35 T_2', 'US_300 M_1')}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,6 +223,27 @@
    "source": [
     "nx.algorithms.matching.max_weight_matching(bipartite_graph)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
