added more comments

--- a/bipartite_matching.ipynb
+++ b/bipartite_matching.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Maximal Bipartite Matching for Inexact Matches Between 2 Tables"
+    "# Maximal Bipartite Matching for Inexact Matches Between 2 Tables"
    ]
   },
   {
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
        " ('USA_35 T_2', 'US_300 M_1')}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
