--- a/bipartite_matching.ipynb
+++ b/bipartite_matching.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,20 +202,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{('AUS_20 T_2', 'AU_300 M_1'),\n",
-       " ('CAL_22 T_2', 'CA_300 M_1'),\n",
-       " ('UK_3 T_2', 'CN_300 M_1'),\n",
-       " ('USA_32 T_2', 'USA_35 T_1'),\n",
-       " ('USA_35 T_2', 'US_300 M_1')}"
+       " ('CA_300 M_1', 'CAL_22 T_2'),\n",
+       " ('CN_300 M_1', 'UK_3 T_2'),\n",
+       " ('USA_35 T_1', 'USA_32 T_2'),\n",
+       " ('US_300 M_1', 'USA_35 T_2')}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,18 +232,211 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Updates after meeting 03.25.2020"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tasks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Generalize the code to \n",
+    "\n",
+    "1. allow for an arbitrary weight function and handle both maximum and minimum\n",
+    "\n",
+    "2. allow to be given two dataframes, and a function that gives you correspondence."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'US': ('300 M', 1), 'CN': ('12 B', 2), 'CA': ('50 M', 3), 'AU': ('25 M', 4)}\n",
+      "{'USA': ('32 T', 7), 'UK': ('3 T', 5), 'AUS': ('20 T', 8), 'CAL': ('22 T', 9)}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<networkx.classes.graph.Graph at 0xa19fe70f0>"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "Transforms the given file to a pandas dataframe object if it was not one already\n",
+    "Assumption: Assumes that the data starts from the 1st row of given file, does not use seperators such as \",\" or \";\"\n",
+    "\n",
+    "Input: Any file\n",
+    "Output: A pandas dataframe object\n",
+    "\"\"\"\n",
+    "def convert_df(file):\n",
+    "    if isinstance(file, pd.DataFrame):\n",
+    "        return file\n",
+    "    else:\n",
+    "        df = pd.read_csv(file)\n",
+    "        return df\n",
+    "\"\"\"\n",
+    "\n",
+    "Calculates maximum weight for the matching\n",
+    "\n",
+    "Input: keys from 2 tables\n",
+    "Output: weight for each matching to be used in the weight part of constructing the graph\n",
+    "\"\"\"\n",
+    "def calc_max_weight(key1, key2):\n",
+    "    weight = 1/(1+similarity(key1,key2))\n",
+    "    return weight\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "Calculates minimum weight for the matching\n",
+    "\n",
+    "Input: keys from 2 tables\n",
+    "Output: weight for each matching to be used in the weight part of constructing the graph\n",
+    "\"\"\"\n",
+    "def calc_min_weight(key1, key2):\n",
+    "    weight = (-1)/(1+similarity(key1,key2))\n",
+    "    return weight\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "Converts the dataframe into dictionary for better accuracy matching of pairs. \n",
+    "Assumption: The data has headers in the first row (description of what that column describes)\n",
+    "\n",
+    "Input: Any file\n",
+    "Output: A dictionary in the form col1:col2 matching\n",
+    "\"\"\"\n",
+    "def make_dict(file):\n",
+    "    V = list(file.to_dict('list').values())\n",
+    "    keys = V[0]\n",
+    "    values = zip(*V[1:])\n",
+    "    table = dict(zip(keys,values))\n",
+    "    return table\n",
+    "            \n",
+    "\"\"\"\n",
+    "\n",
+    "Constructs a maximal bipartite graph of the given two tables\n",
+    "\n",
+    "Input: Any 2 files in any format\n",
+    "Output: A Bipartite Graph with Maximal Weights\n",
+    "\"\"\"\n",
+    "def updated_maximal_construct_graph(file_a, file_b):\n",
+    "    # The area marked with ------ can be made into a helper function to avoid repetition\n",
+    "    table_a_unprocessed = convert_df(file_a)\n",
+    "    table_b_unprocessed = convert_df(file_b)\n",
+    "    bipartite_graph = nx.Graph()\n",
+    "    \n",
+    "    table_a = make_dict(table_a_unprocessed)\n",
+    "    table_b = make_dict(table_b_unprocessed)\n",
+    "    print(table_a)\n",
+    "    print(table_b)\n",
+    "    for key1, val1 in table_a.items():\n",
+    "       # print(val1)\n",
+    "       # key1, val1 = first\n",
+    "        id1 = key1 + '_' + str(val1) + '_1'\n",
+    "        for key2, val2 in table_b.items():\n",
+    "          #  key2, val2 = second\n",
+    "            id2 = key2 + '_' + str(val2) + '_2' #add value to identifier to disitnguish two entries with different values\n",
+    "            bipartite_graph.add_edge(id1, id2, weight=calc_max_weight(key1, key2)) #edit distance and weight should be inv. prop.\n",
+    "                                                                                    #also adding 1 to denom. to prevent divide by 0\n",
+    "            # add 1,2 to distinguish two key-value tuples belonging to different tables\n",
+    "    return bipartite_graph\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "Constructs a maximal bipartite graph of the given two tables\n",
+    "\n",
+    "Input: Any 2 files in any format\n",
+    "Output: A Bipartite Graph with Minimal Weights\n",
+    "\"\"\"\n",
+    "def updated_minimal_construct_graph(file_a, file_b):\n",
+    "    table_a_unprocessed = convert_df(file_a)\n",
+    "    table_b_unprocessed = convert_df(file_a)\n",
+    "    bipartite_graph = nx.Graph()\n",
+    "    \n",
+    "    table_a = make_dict(table_a_unprocessed)\n",
+    "    table_b = make_dict(table_b_unprocessed)\n",
+    "    for key1, val1 in table_a.items():\n",
+    "     #   key1, val1 = first\n",
+    "        id1 = key1 + '_' + str(val1) + '_1'\n",
+    "        for key2, val2 in table_b.items():\n",
+    "         #   key2, val2 = second\n",
+    "            id2 = key2 + '_' + str(val2) + '_2' #add value to identifier to disitnguish two entries with different values\n",
+    "            bipartite_graph.add_edge(id1, id2, weight=calc_min_weight(key1, key2)) #edit distance and weight should be inv. prop.\n",
+    "                                                                            #also adding 1 to denom. to prevent divide by 0\n",
+    "                                     # add 1,2 to distinguish two key-value tuples belonging to different tables\n",
+    "    return bipartite_graph\n",
+    "\n",
+    "bipartite_graph_maximal = updated_maximal_construct_graph(\"table_a.csv\",\"table_b.csv\")\n",
+    "bipartite_graph_maximal\n",
+    "bipartite_graph_minimal = updated_minimal_construct_graph(\"table_a.csv\", \"table_b.csv\")\n",
+    "bipartite_graph_minimal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(\"AU_('25 M', 4)_1\", \"AUS_('20 T', 8)_2\"),\n",
+       " (\"CAL_('22 T', 9)_2\", \"CA_('50 M', 3)_1\"),\n",
+       " (\"CN_('12 B', 2)_1\", \"UK_('3 T', 5)_2\"),\n",
+       " (\"USA_('32 T', 7)_2\", \"US_('300 M', 1)_1\")}"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nx.algorithms.matching.max_weight_matching(bipartite_graph_maximal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set()"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nx.algorithms.matching.max_weight_matching(bipartite_graph_minimal)"
+   ]
   },
   {
    "cell_type": "code",
