Task Work Finalized

--- a/bipartite_matching.ipynb
+++ b/bipartite_matching.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Maximal Bipartite Matching for Inexact Matches Between 2 Tables"
+    "# Maximal and Minimal Bipartite Matching for Inexact Matches Between 2 Tables"
    ]
   },
   {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,20 +202,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{('AUS_20 T_2', 'AU_300 M_1'),\n",
-       " ('CA_300 M_1', 'CAL_22 T_2'),\n",
-       " ('CN_300 M_1', 'UK_3 T_2'),\n",
-       " ('USA_35 T_1', 'USA_32 T_2'),\n",
+       "{('AU_300 M_1', 'AUS_20 T_2'),\n",
+       " ('CAL_22 T_2', 'CA_300 M_1'),\n",
+       " ('UK_3 T_2', 'CN_300 M_1'),\n",
+       " ('USA_32 T_2', 'USA_35 T_1'),\n",
        " ('US_300 M_1', 'USA_35 T_2')}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -272,10 +272,10 @@
     {
      "data": {
       "text/plain": [
-       "<networkx.classes.graph.Graph at 0xa19fe70f0>"
+       "EdgeDataView([(\"US_('300 M', 1)_1\", \"US_('300 M', 1)_2\", {'weight': -1.0}), (\"US_('300 M', 1)_1\", \"CN_('12 B', 2)_2\", {'weight': -0.3333333333333333}), (\"US_('300 M', 1)_1\", \"CA_('50 M', 3)_2\", {'weight': -0.3333333333333333}), (\"US_('300 M', 1)_1\", \"AU_('25 M', 4)_2\", {'weight': -0.3333333333333333}), (\"US_('300 M', 1)_2\", \"CN_('12 B', 2)_1\", {'weight': -0.3333333333333333}), (\"US_('300 M', 1)_2\", \"CA_('50 M', 3)_1\", {'weight': -0.3333333333333333}), (\"US_('300 M', 1)_2\", \"AU_('25 M', 4)_1\", {'weight': -0.3333333333333333}), (\"CN_('12 B', 2)_2\", \"CN_('12 B', 2)_1\", {'weight': -1.0}), (\"CN_('12 B', 2)_2\", \"CA_('50 M', 3)_1\", {'weight': -0.5}), (\"CN_('12 B', 2)_2\", \"AU_('25 M', 4)_1\", {'weight': -0.3333333333333333}), (\"CA_('50 M', 3)_2\", \"CN_('12 B', 2)_1\", {'weight': -0.5}), (\"CA_('50 M', 3)_2\", \"CA_('50 M', 3)_1\", {'weight': -1.0}), (\"CA_('50 M', 3)_2\", \"AU_('25 M', 4)_1\", {'weight': -0.3333333333333333}), (\"AU_('25 M', 4)_2\", \"CN_('12 B', 2)_1\", {'weight': -0.3333333333333333}), (\"AU_('25 M', 4)_2\", \"CA_('50 M', 3)_1\", {'weight': -0.3333333333333333}), (\"AU_('25 M', 4)_2\", \"AU_('25 M', 4)_1\", {'weight': -1.0})])"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,57 +390,39 @@
     "    return bipartite_graph\n",
     "\n",
     "bipartite_graph_maximal = updated_maximal_construct_graph(\"table_a.csv\",\"table_b.csv\")\n",
-    "bipartite_graph_maximal\n",
+    "#print(bipartite_graph_maximal.edges.data())\n",
     "bipartite_graph_minimal = updated_minimal_construct_graph(\"table_a.csv\", \"table_b.csv\")\n",
-    "bipartite_graph_minimal"
+    "bipartite_graph_minimal.edges.data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{(\"AU_('25 M', 4)_1\", \"AUS_('20 T', 8)_2\"),\n",
-       " (\"CAL_('22 T', 9)_2\", \"CA_('50 M', 3)_1\"),\n",
-       " (\"CN_('12 B', 2)_1\", \"UK_('3 T', 5)_2\"),\n",
-       " (\"USA_('32 T', 7)_2\", \"US_('300 M', 1)_1\")}"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"CA_('50 M', 3)_1\": \"US_('300 M', 1)_2\", \"US_('300 M', 1)_1\": \"CN_('12 B', 2)_2\", \"AU_('25 M', 4)_1\": \"CA_('50 M', 3)_2\", \"CN_('12 B', 2)_1\": \"AU_('25 M', 4)_2\", \"AU_('25 M', 4)_2\": \"CN_('12 B', 2)_1\", \"CN_('12 B', 2)_2\": \"US_('300 M', 1)_1\", \"US_('300 M', 1)_2\": \"CA_('50 M', 3)_1\", \"CA_('50 M', 3)_2\": \"AU_('25 M', 4)_1\"}\n"
+     ]
     }
    ],
    "source": [
-    "nx.algorithms.matching.max_weight_matching(bipartite_graph_maximal)"
+    "#nx.algorithms.matching.max_weight_matching(bipartite_graph_maximal)\n",
+    "print(nx.algorithms.bipartite.matching.maximum_matching(bipartite_graph_minimal))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 63,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "set()"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "nx.algorithms.matching.max_weight_matching(bipartite_graph_minimal)"
+    "As expected, minimal matching gave a worse off matching because our edit_distance function was configured to give a high number for words that were closer to each other. Therefore, maximal matching gave us better results than the minimal matching. However, this can be configured by changing the edit_distance function to make minimal matching give better results. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": []
