--- a/bipartite_matching.ipynb
+++ b/bipartite_matching.ipynb
@@ -343,7 +343,6 @@
     "Output: A Bipartite Graph with Maximal Weights\n",
     "\"\"\"\n",
     "def updated_maximal_construct_graph(file_a, file_b):\n",
-    "    # The area marked with ------ can be made into a helper function to avoid repetition\n",
     "    table_a_unprocessed = convert_df(file_a)\n",
     "    table_b_unprocessed = convert_df(file_b)\n",
     "    bipartite_graph = nx.Graph()\n",
@@ -354,13 +353,13 @@
     "    print(table_b)\n",
     "    for key1, val1 in table_a.items():\n",
     "       # print(val1)\n",
-    "       # key1, val1 = first\n",
     "        id1 = key1 + '_' + str(val1) + '_1'\n",
     "        for key2, val2 in table_b.items():\n",
-    "          #  key2, val2 = second\n",
-    "            id2 = key2 + '_' + str(val2) + '_2' #add value to identifier to disitnguish two entries with different values\n",
-    "            bipartite_graph.add_edge(id1, id2, weight=calc_max_weight(key1, key2)) #edit distance and weight should be inv. prop.\n",
-    "                                                                                    #also adding 1 to denom. to prevent divide by 0\n",
+    "            #add value to identifier to disitnguish two entries with different values\n",
+    "            id2 = key2 + '_' + str(val2) + '_2' \n",
+    "            bipartite_graph.add_edge(id1, id2, weight=calc_max_weight(key1, key2))\n",
+    "            #edit distance and weight should be inv. prop.\n",
+    "            #also adding 1 to denom. to prevent divide by 0\n",
     "            # add 1,2 to distinguish two key-value tuples belonging to different tables\n",
     "    return bipartite_graph\n",
     "\n",
@@ -379,14 +378,14 @@
     "    table_a = make_dict(table_a_unprocessed)\n",
     "    table_b = make_dict(table_b_unprocessed)\n",
     "    for key1, val1 in table_a.items():\n",
-    "     #   key1, val1 = first\n",
     "        id1 = key1 + '_' + str(val1) + '_1'\n",
     "        for key2, val2 in table_b.items():\n",
-    "         #   key2, val2 = second\n",
-    "            id2 = key2 + '_' + str(val2) + '_2' #add value to identifier to disitnguish two entries with different values\n",
-    "            bipartite_graph.add_edge(id1, id2, weight=calc_min_weight(key1, key2)) #edit distance and weight should be inv. prop.\n",
-    "                                                                            #also adding 1 to denom. to prevent divide by 0\n",
-    "                                     # add 1,2 to distinguish two key-value tuples belonging to different tables\n",
+    "            #add value to identifier to disitnguish two entries with different values\n",
+    "            id2 = key2 + '_' + str(val2) + '_2' \n",
+    "            bipartite_graph.add_edge(id1, id2, weight=calc_min_weight(key1, key2)) \n",
+    "            #edit distance and weight should be inv. prop.\n",
+    "            #also adding 1 to denom. to prevent divide by 0\n",
+    "            # add 1,2 to distinguish two key-value tuples belonging to different tables\n",
     "    return bipartite_graph\n",
     "\n",
     "bipartite_graph_maximal = updated_maximal_construct_graph(\"table_a.csv\",\"table_b.csv\")\n",
@@ -417,7 +416,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As expected, minimal matching gave a worse off matching because our edit_distance function was configured to give a high number for words that were closer to each other. Therefore, maximal matching gave us better results than the minimal matching. However, this can be configured by changing the edit_distance function to make minimal matching give better results. "
+    "As expected, minimal matching gave a worse matching because our edit_distance function was configured to give a high number for words that were closer to each other. Therefore, maximal matching gave us better results than the minimal matching. However, this can be configured by changing the edit_distance function to make minimal matching give better results. "
    ]
   },
   {
