--- a/matching_data.ipynb
+++ b/matching_data.ipynb
@@ -29,15 +29,18 @@
    "metadata": {},
    "source": [
     "Some assumptions and notes:\n",
-    "* We are checking string similarity using the titles column of the 2 datasets\n",
-    "* Added `encoded=latin1` for pandas errors on file reading in the function `convert_df`"
+    "* We are checking string similarity using the `titles` column of the 2 datasets\n",
+    "\n",
+    "* Added `encoded=latin-1` for pandas errors on file reading in the function `convert_df`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### First, we'll include the bipartite matching algorithm components from our previous findings"
+    "#### First, we'll include the bipartite matching algorithm components from our previous findings. We can try out different string matching techniques. \n",
+    "\n",
+    "#### A good starting point would be to see how `editDistance` is working in this context, so we'll include the function below."
    ]
   },
   {
