tasks done but program can be optimized to run faster?

--- a/matching_data.ipynb
+++ b/matching_data.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,30 +79,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'US': ('300 M', 1), 'CN': ('12 B', 2), 'CA': ('50 M', 3), 'AU': ('25 M', 4)}\n",
-      "{'USA': ('32 T', 7), 'UK': ('3 T', 5), 'AUS': ('20 T', 8), 'CAL': ('22 T', 9)}\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "EdgeDataView([(\"US_('300 M', 1)_1\", \"US_('300 M', 1)_2\", {'weight': -1.0}), (\"US_('300 M', 1)_1\", \"CN_('12 B', 2)_2\", {'weight': -0.3333333333333333}), (\"US_('300 M', 1)_1\", \"CA_('50 M', 3)_2\", {'weight': -0.3333333333333333}), (\"US_('300 M', 1)_1\", \"AU_('25 M', 4)_2\", {'weight': -0.3333333333333333}), (\"US_('300 M', 1)_2\", \"CN_('12 B', 2)_1\", {'weight': -0.3333333333333333}), (\"US_('300 M', 1)_2\", \"CA_('50 M', 3)_1\", {'weight': -0.3333333333333333}), (\"US_('300 M', 1)_2\", \"AU_('25 M', 4)_1\", {'weight': -0.3333333333333333}), (\"CN_('12 B', 2)_2\", \"CN_('12 B', 2)_1\", {'weight': -1.0}), (\"CN_('12 B', 2)_2\", \"CA_('50 M', 3)_1\", {'weight': -0.5}), (\"CN_('12 B', 2)_2\", \"AU_('25 M', 4)_1\", {'weight': -0.3333333333333333}), (\"CA_('50 M', 3)_2\", \"CN_('12 B', 2)_1\", {'weight': -0.5}), (\"CA_('50 M', 3)_2\", \"CA_('50 M', 3)_1\", {'weight': -1.0}), (\"CA_('50 M', 3)_2\", \"AU_('25 M', 4)_1\", {'weight': -0.3333333333333333}), (\"AU_('25 M', 4)_2\", \"CN_('12 B', 2)_1\", {'weight': -0.3333333333333333}), (\"AU_('25 M', 4)_2\", \"CA_('50 M', 3)_1\", {'weight': -0.3333333333333333}), (\"AU_('25 M', 4)_2\", \"AU_('25 M', 4)_1\", {'weight': -1.0})])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
+    "import networkx as nx\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "Transforms the given file to a pandas dataframe object if it was not one already\n",
+    "Assumption: Assumes that the data starts from the 1st row of given file, does not use seperators such as \",\" or \";\"\n",
+    "\n",
+    "Input: 2 variables that will be measured for similarity\n",
+    "Output: The desired similarity metric result\n",
+    "\"\"\"\n",
+    "def similarity(x,y):\n",
+    "    return editDistance(x,y,len(x),len(y))\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -170,15 +174,14 @@
     "    \n",
     "    table_a = make_dict(table_a_unprocessed)\n",
     "    table_b = make_dict(table_b_unprocessed)\n",
-    "    print(table_a)\n",
-    "    print(table_b)\n",
+    "    \n",
     "    for key1, val1 in table_a.items():\n",
     "       # print(val1)\n",
-    "        id1 = key1 + '_' + str(val1) + '_1'\n",
+    "        id1 = str(key1) + '_' + str(val1) + '_1'\n",
     "        for key2, val2 in table_b.items():\n",
     "            #add value to identifier to disitnguish two entries with different values\n",
-    "            id2 = key2 + '_' + str(val2) + '_2' \n",
-    "            bipartite_graph.add_edge(id1, id2, weight=calc_max_weight(key1, key2))\n",
+    "            id2 = str(key2) + '_' + str(val2) + '_2' \n",
+    "            bipartite_graph.add_edge(id1, id2, weight=calc_max_weight(val1, val2))\n",
     "            #edit distance and weight should be inv. prop.\n",
     "            #also adding 1 to denom. to prevent divide by 0\n",
     "            # add 1,2 to distinguish two key-value tuples belonging to different tables\n",
@@ -198,11 +201,12 @@
     "    \n",
     "    table_a = make_dict(table_a_unprocessed)\n",
     "    table_b = make_dict(table_b_unprocessed)\n",
+    "    \n",
     "    for key1, val1 in table_a.items():\n",
-    "        id1 = key1 + '_' + str(val1) + '_1'\n",
+    "        id1 = str(key1) + '_' + str(val1) + '_1'\n",
     "        for key2, val2 in table_b.items():\n",
     "            #add value to identifier to disitnguish two entries with different values\n",
-    "            id2 = key2 + '_' + str(val2) + '_2' \n",
+    "            id2 = str(key2) + '_' + str(val2) + '_2' \n",
     "            bipartite_graph.add_edge(id1, id2, weight=calc_min_weight(key1, key2)) \n",
     "            #edit distance and weight should be inv. prop.\n",
     "            #also adding 1 to denom. to prevent divide by 0\n",
@@ -217,14 +221,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"CN_('12 B', 2)_1\": \"US_('300 M', 1)_2\", \"US_('300 M', 1)_1\": \"CN_('12 B', 2)_2\", \"AU_('25 M', 4)_1\": \"CA_('50 M', 3)_2\", \"CA_('50 M', 3)_1\": \"AU_('25 M', 4)_2\", \"US_('300 M', 1)_2\": \"CN_('12 B', 2)_1\", \"AU_('25 M', 4)_2\": \"CA_('50 M', 3)_1\", \"CA_('50 M', 3)_2\": \"AU_('25 M', 4)_1\", \"CN_('12 B', 2)_2\": \"US_('300 M', 1)_1\"}\n"
+      "{\"CA_('50 M', 3)_1\": \"US_('300 M', 1)_2\", \"CN_('12 B', 2)_1\": \"CN_('12 B', 2)_2\", \"AU_('25 M', 4)_1\": \"CA_('50 M', 3)_2\", \"US_('300 M', 1)_1\": \"AU_('25 M', 4)_2\", \"CA_('50 M', 3)_2\": \"AU_('25 M', 4)_1\", \"AU_('25 M', 4)_2\": \"US_('300 M', 1)_1\", \"CN_('12 B', 2)_2\": \"CN_('12 B', 2)_1\", \"US_('300 M', 1)_2\": \"CA_('50 M', 3)_1\"}\n"
      ]
     }
    ],
@@ -242,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,6 +256,39 @@
     "\n",
     "table_b = convert_df(\"DBLP2.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph_maximal = updated_maximal_construct_graph(table_a, table_b)\n",
+    "#graph_maximal.edges.data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(nx.algorithms.matching.max_weight_matching(graph_maximal))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
